Styling adjustments to control height overflow bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,4 +18,5 @@
 
 body {
   background-color: #f9fafe;
+  height: 100vh;
 }
